Fix ActiveRecord To-Do to Use YAML, Not dotenv
For simplicity, the ActiveRecord version of the To-Do program now uses a
YAML file to hold all DB connection info instead of using dotenv to
modify environment variables like previous exercises. Like the dotenv
version, however, actual DB info is kept out of the repo using
.gitignore exclusion with example files included for those who wish to
replicate the functionality. Also, config.yml renamed database.yaml
since this is more descriptive.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 /.idea
 *.sublime-*
 
-# .env Files #
-##############
+# Sensitive Config Files #
+##########################
+config.y*ml
+database.y*ml
 .env
 .env.test
 
