--- a/Extended Exercises/todo_activerecord/db/database.example.yaml
+++ b/Extended Exercises/todo_activerecord/db/database.example.yaml
@@ -1,7 +1,11 @@
 development:
   adapter: postgresql
   database: ar_todo_dev
+  username: johnuser
+  password: password
 
 test: 
   adapter: postgresql
   database: ar_todo_test
+  username: johnuser
+  password: password
