--- a/Extended Exercises/todo_activerecord/Rakefile
+++ b/Extended Exercises/todo_activerecord/Rakefile
@@ -1,3 +1,7 @@
 require 'active_record_migrations'
 
+ActiveRecordMigrations.configure do |c|
+  c.yaml_config = 'db/database.yaml'
+end
+
 ActiveRecordMigrations.load_tasks
